exports[`snapshot BorderBox 1`] = `
<div
  data-css-sugk1c="">
  <div>
    This is Test
  </div>
</div>
`;

exports[`snapshot ContentBox 1`] = `
<div
  data-css-1tbdkyc="">
  <div>
    This is Test
  </div>
</div>
`;

exports[`snapshot PaddingBox 1`] = `
<div
  data-css-1tbdkyc="">
  <div>
    This is Test
  </div>
</div>
`;
